--- a/src/app/contacts-list/contacts-list.component.html
+++ b/src/app/contacts-list/contacts-list.component.html
@@ -1,3 +1,12 @@
 <p>
   contacts-list works!
 </p>
+
+<!-- first is name you will use to call data, second is name of var from ts file -->
+<ul *ngFor="let contact of contacts">
+  <li *ngIf="contact.firstName == 'Martin' ">
+    {{contact.firstName}} {{contact.lastName}} | {{contact.email}}
+  </li>
+
+</ul>
+
