--- a/src/app/contacts-list/contacts-list.component.html
+++ b/src/app/contacts-list/contacts-list.component.html
@@ -4,10 +4,9 @@
 
 <!-- first is name you will use to call data, second is name of var from ts file -->
 <ul *ngFor="let contact of contacts">
-  <li *ngIf="contact.firstName == 'Martin' && contact.lastName == 'Hess' ">
+  <li (click)="removeContact(contact)">
     {{contact.firstName}} {{contact.lastName}} | {{contact.email}}
   </li>
-
 </ul>
 
 
