--- a/src/app/components/contacts-list/contacts-list.component.html
+++ b/src/app/components/contacts-list/contacts-list.component.html
@@ -1,23 +1,30 @@
-<table class="table table-hover">
-    <thead>
+
+<div class="container">
+    Filter Value:  <input type="text" name="" [(ngModel)] = "searchTerm">
+
+    <table class="table table-hover">
+        <thead>
         <tr>
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
             <th scope="col">Email</th>
             <th scope="col">Menu</th>
         </tr>
-    </thead>
-    <tbody>
-        <tr class="table-light" *ngFor="let contact of contacts">
+        </thead>
+        <tbody>
+        <tr class="table-light" *ngFor="let contact of contacts | filter:searchTerm">
             <td>{{contact.firstName}}</td>
             <td>{{contact.lastName}}</td>
-            <td>{{contact.email}}</td>
+            <td>{{contact.email | uppercase}}</td>
             <td><button class="btn btn-danger" (click)="removeContact(contact)">Delete</button></td>
         </tr>
-    </tbody>
-</table>
+        </tbody>
+    </table>
 
-<input type="text" name="" [(ngModel)] = "testModel">
-<div> Input Value: {{testModel}}</div>
+
+</div>
+
+
+
 
 
